// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketNavbarContent/> getNextSettings should move a root view to a root view 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 2,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 1,
    },
    "2": {
      "display_order": 0,
    },
    "3": {
      "display_order": 3,
    },
    "4": {
      "display_order": 4,
    },
    "5": {
      "display_order": 5,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a root view to a section view 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 1,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 3,
    },
    "2": {
      "display_order": 0,
    },
    "3": {
      "display_order": 2,
    },
    "4": {
      "display_order": 4,
    },
    "5": {
      "display_order": 5,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a section to a root view 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 1,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 0,
    },
    "2": {
      "display_order": 5,
    },
    "3": {
      "display_order": 2,
    },
    "4": {
      "display_order": 3,
    },
    "5": {
      "display_order": 4,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a section to a section 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 4,
    },
    "2": {
      "display_order": 2,
    },
  },
  "views": {
    "1": {
      "display_order": 0,
    },
    "2": {
      "display_order": 1,
    },
    "3": {
      "display_order": 5,
    },
    "4": {
      "display_order": 6,
    },
    "5": {
      "display_order": 7,
    },
    "6": {
      "display_order": 3,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a section to content boundary 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 0,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 4,
    },
    "2": {
      "display_order": 5,
    },
    "3": {
      "display_order": 1,
    },
    "4": {
      "display_order": 2,
    },
    "5": {
      "display_order": 3,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a section to content boundary 2`] = `
{
  "view_sections": {
    "1": {
      "display_order": 4,
    },
    "2": {
      "display_order": 2,
    },
  },
  "views": {
    "1": {
      "display_order": 0,
    },
    "2": {
      "display_order": 1,
    },
    "3": {
      "display_order": 5,
    },
    "4": {
      "display_order": 6,
    },
    "5": {
      "display_order": 7,
    },
    "6": {
      "display_order": 3,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a section view to a root view 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 3,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 0,
    },
    "2": {
      "display_order": 2,
    },
    "3": {
      "display_order": 4,
    },
    "4": {
      "display_order": 1,
    },
    "5": {
      "display_order": 5,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a section view to a section view 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 2,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 0,
    },
    "2": {
      "display_order": 1,
    },
    "3": {
      "display_order": 4,
    },
    "4": {
      "display_order": 3,
    },
    "5": {
      "display_order": 5,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a view down a section 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 1,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 2,
    },
    "2": {
      "display_order": 0,
    },
    "3": {
      "display_order": 3,
    },
    "4": {
      "display_order": 4,
    },
    "5": {
      "display_order": 5,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a view ontop of a section 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 2,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 1,
    },
    "2": {
      "display_order": 0,
    },
    "3": {
      "display_order": 3,
    },
    "4": {
      "display_order": 4,
    },
    "5": {
      "display_order": 5,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a view to content boundary 1`] = `
{
  "view_sections": {
    "1": {
      "display_order": 2,
    },
    "2": {
      "display_order": 6,
    },
  },
  "views": {
    "1": {
      "display_order": 1,
    },
    "2": {
      "display_order": 0,
    },
    "3": {
      "display_order": 3,
    },
    "4": {
      "display_order": 4,
    },
    "5": {
      "display_order": 5,
    },
    "6": {
      "display_order": 7,
    },
  },
}
`;

exports[`<TicketNavbarContent/> getNextSettings should move a view to content boundary 2`] = `
{
  "view_sections": {
    "1": {
      "display_order": 1,
    },
    "2": {
      "display_order": 5,
    },
  },
  "views": {
    "1": {
      "display_order": 0,
    },
    "2": {
      "display_order": 7,
    },
    "3": {
      "display_order": 2,
    },
    "4": {
      "display_order": 3,
    },
    "5": {
      "display_order": 4,
    },
    "6": {
      "display_order": 6,
    },
  },
}
`;

exports[`<TicketNavbarContent/> rendering should expand/collapse a section 1`] = `
<div
  class="wrapper wrapper"
>
  <div
    data-testid="TicketNavbarSection"
  >
    {"isExpanded":true,"sectionElement":{"data":{"created_datetime":"2020-10-14T14:26:35.921523+00:00","id":1,"name":"foo","private":false,"decoration":null,"uri":"foo","updated_datetime":"2020-10-14T14:26:35.921523+00:00"},"type":"section","children":[]},"viewsCount":{"7":0}}
  </div>
  <div
    data-testid="TicketNavbarView"
  >
    New & Open Tickets
  </div>
</div>
`;

exports[`<TicketNavbarContent/> rendering should expand/collapse a section 2`] = `
<div
  class="wrapper wrapper"
>
  <div
    data-testid="TicketNavbarSection"
  >
    {"isExpanded":false,"sectionElement":{"data":{"created_datetime":"2020-10-14T14:26:35.921523+00:00","id":1,"name":"foo","private":false,"decoration":null,"uri":"foo","updated_datetime":"2020-10-14T14:26:35.921523+00:00"},"type":"section","children":[]},"viewsCount":{"7":0}}
  </div>
  <div
    data-testid="TicketNavbarView"
  >
    New & Open Tickets
  </div>
</div>
`;

exports[`<TicketNavbarContent/> rendering should render 1`] = `
<div
  class="wrapper wrapper"
>
  <div
    data-testid="TicketNavbarSection"
  >
    {"isExpanded":true,"sectionElement":{"data":{"created_datetime":"2020-10-14T14:26:35.921523+00:00","id":1,"name":"foo","private":false,"decoration":null,"uri":"foo","updated_datetime":"2020-10-14T14:26:35.921523+00:00"},"type":"section","children":[]},"viewsCount":{"7":0}}
  </div>
  <div
    data-testid="TicketNavbarView"
  >
    New & Open Tickets
  </div>
</div>
`;
